@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1190.2.12 2010-05-28 09:28:14 mb Exp $
+# $Id: CHANGES,v 1.1190.2.13 2010-05-28 17:00:39 dz Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -234,6 +234,7 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.8 (2010/??/??)
+ - (2010/05/28) Fixed bug#5235 - Link in response not shown as link.
  - (2010/05/28) Added PNG version of data model in doc directory.
  - (2010/05/28) Fixed bug#5395 - Function $LanguageObject->Time() can't process
     seconds.
